barra-progress On branch main

--- a/media_query.css
+++ b/media_query.css
@@ -42,6 +42,9 @@
     }   
     .parte3 {
         padding: 0px 0px;
+    }
+    .barra-progresso{
+        width: 300px;
     }   
     footer#rodape{
         padding: 10px 0px;
