--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: "Inter", "sans-serif";
     text-align: center;
 }
 body, html {
     height: 100vh;
-    width: 98.9vw;
+    width: 100vw;
 }
 .titulo {
     font-size: 48px;
@@ -32,7 +33,7 @@ body, html {
 }
 .parte1 {
     background-color: #0D0D0D;
-    padding: 80px;
+    padding: 50px 200px;
 }
 .text {
     color: #828a9c;
@@ -52,6 +53,7 @@ body, html {
 .center {
     display: block;
     background: #828a9c url(imagens/imagem_sem_fundo.png) no-repeat;
+    background-attachment: fixed;
     background-size: contain;
     background-position: center;
     height: 577px;
@@ -80,6 +82,11 @@ body, html {
     background-color: #828a9c;
     color: #590202;
     padding: 80px 80px;
+}
+.parte3 .subtitulo1{
+    font-size: 22px;
+    font-weight: 600;
+    letter-spacing: 1pt;
 }
 .barra-progresso{
     height: 40px;
