--- a/style.css
+++ b/style.css
@@ -13,36 +13,40 @@ body, html {
     width: 100vw;
 }
 .titulo {
-    font-size: 48px;
+    font-size: 60px;
     font-weight: 900;
     color: #ECF2DF;
-}
-.subtitulo1 {
-    font-size: 26px;
-    color: #590202;
-    font-weight: 600;
-    letter-spacing: 2pt;
+    text-shadow: 1px 1px 8px #ffffff;
     padding-bottom: 20px;
 }
-.subtitulo2 {
+.subtitulo1 {
+    font-size: 30px;
     color: #590202;
-    font-size: 22px;
     font-weight: 600;
     letter-spacing: 1pt;
     padding-bottom: 30px;
+    text-shadow: 1px 1px 1px #ffffff;
+}
+.subtitulo2 {
+    color: #590202;
+    font-size: 30px;
+    font-weight: 600;
+    letter-spacing: 1pt;
+    padding-bottom: 30px;
+    text-shadow: 1px 1px 1px #ffffff;
 }
 .parte1 {
     background-color: #0D0D0D;
     padding: 50px 200px;
 }
-.text {
+.paragrafo-parte1 {
     color: #828a9c;
     font-size: 20px;
     letter-spacing: 1pt;
     line-height: 32px;
     margin-bottom: 20px;
 }
-.btn {
+.mais-info {
     background-color: #0D0D0D;
     border-radius: 5px;
     padding: 20px 40px;
@@ -50,7 +54,7 @@ body, html {
     text-decoration: none;
     font-weight: 600;
 }
-.center {
+.imagem {
     display: block;
     background: #828a9c url(imagens/imagem_sem_fundo.png) no-repeat;
     background-attachment: fixed;
@@ -60,40 +64,44 @@ body, html {
 }
 .parte2 {
     background-color: #590202;
-    padding: 100px 200px;
+    padding: 100px 300px;
     color: #828a9c;
-}    
-.parte2 .subtitulo1{
-    color: #f4cacf;
 }
-.parte2 .subtitulo2{
+.paragrafos-parte2{
+    padding-bottom: 20px;
+}
+.parte2 p {
+    text-align: left;    
+}    
+.titulo-parte2 {
+    color: #f4cacf;
+    font-size: 40px;
+    font-weight: 600;
+    letter-spacing: 1pt;
+    padding-bottom: 30px;
+    text-shadow: 6px 6px 10px #0D0D0D;
+}
+.cursos-parte2{
     color: #f4cacf;
     padding-bottom: 0px;
-}
-.parte2 .text{
-    letter-spacing: 1pt;
-    margin-bottom: 40px;
-}
-.parte2 .Cursos{
-    list-style: none;
-    padding-bottom: 40px;
 }
 .parte3{
     background-color: #828a9c;
     color: #590202;
     padding: 80px 80px;
 }
-.parte3 .subtitulo1{
-    font-size: 22px;
+.titulo-parte3{
+    font-size: 26px;
     font-weight: 600;
     letter-spacing: 1pt;
+    padding-bottom: 30px;
 }
-.barra-progresso{
+.barra-progress{
     height: 40px;
     width: 400px;
     accent-color: #590202;
 }
-.Habilidades{
+.habilidades{
     color: #0D0D0D;
     font-weight: 600;
 }
