--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body, html {
     height: 100vh;
     width: 100vw;
 }
+
+/* Primeira parte: onde faço minha apresentação */
 .titulo {
     font-size: 46px;
     font-weight: 900;
@@ -55,6 +57,8 @@ body, html {
     font-weight: 600;
     text-shadow: 1px 1px 7px #ffffff;
 }
+
+/* Aside: minha foto de perfil */
 .imagem {
     display: block;
     background: #828a9c url(imagens/imagem_sem_fundo.png) no-repeat;
@@ -63,6 +67,8 @@ body, html {
     background-position: center;
     height: 577px;
 }
+
+/* Segunda parte: onde está listados os cursos */
 .parte2 {
     background-color: #590202;
     padding: 100px 300px;
@@ -86,6 +92,8 @@ body, html {
     color: #f4cacf;
     padding-bottom: 0px;
 }
+
+/* Terceira parte: grafico das minhas habilidades */
 .parte3{
     background-color: #828a9c;
     color: #590202;
@@ -106,6 +114,8 @@ body, html {
     color: #0D0D0D;
     font-weight: 600;
 }
+
+/* Footer: rodapé contendo informações de contato */
 .rodape{
     background-color: #0D0D0D;
     color: #828a9c;
@@ -113,6 +123,8 @@ body, html {
     font-size: 14px;
     line-height: 25px;
 }
+
+/* Links */
 a{
     color: #828a9c;
 }
